--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,11 +5,11 @@ import Project from "../components/project.astro";
 import Layout from "../layouts/main.astro";
 ---
 
-<Layout title="My Projects">
+<Layout title="My projects">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
-      title="My Projects"
-      description="Here are some of the current projects I've been working on. I really enjoy creating new projects and coming up with new ideas. I'm always working on something new, so check back often!"
+      title="Mes projets"
+      description="Ici, vous pouvez trouver certains de mes projets réalisés au cours de ma formation de développeur web ainsi que des projets personnels"
     />
 
     <div
