--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/main.astro";
 <Layout title="About me">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
-      title="A propos"
+      title="A propos de moi"
       description="Bonjour 👋 Je suis un développeur web fullstack basé à Reims. Passionné par la création de nouveaux produits et outils."
     />
 
