--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import Layout from "../layouts/main.astro";
           Bonjour, c'est Adlan.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-          Je suis un développeur web full-stack de Reims. <br
+          Je suis un développeur web fullstack de Reims. <br
             class="hidden lg:block"
-          /> Je crée toutes sortes d'applications web.<br class="hidden lg:block" />
+          /> Vous pouvez me confier la création des applications web de toutes sortes.<br class="hidden lg:block" />
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           J'utilise les technologies suivantes):
@@ -28,10 +28,10 @@ import Layout from "../layouts/main.astro";
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>ReactJS</li>
-          <li>Express.JS</li>
-          <li>Node.JS</li>
-          <li>Design avec Figma</li>
+          <li>HTML / CSS / ReactJS : pour le frontend</li>
+          <li>Node.js avec ExpressJs pour le backend</li>
+          <li>SQL pour la gestion des données</li>
+          <li>Figma pour UX / UI design</li>
           <li>Et bien plus</li>
         </ul>
         <Button text="Suivez-moi sur LinkedIn 𝕏" link="https://www.linkedin.com/in/khaliev/" />
