--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Layout from "../layouts/main.astro";
           /> Vous pouvez me confier la création des applications web de toutes sortes.<br class="hidden lg:block" />
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
-          J'utilise les technologies suivantes):
+          J'utilise les technologies suivantes:
         </p>
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
