index page corrected

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,13 +28,13 @@ import Layout from "../layouts/main.astro";
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>HTML / CSS / ReactJS : pour le frontend</li>
-          <li>Node.js avec ExpressJs pour le backend</li>
+          <li>HTML / CSS / React.js / Astro.js < : pour le frontend</li>
+          <li>Node.js avec Express.js pour le backend</li>
           <li>SQL pour la gestion des données</li>
           <li>Figma pour UX / UI design</li>
           <li>Et bien plus</li>
         </ul>
-        <Button text="Suivez-moi sur LinkedIn 𝕏" link="https://www.linkedin.com/in/khaliev/" />
+        <Button text="Suivez-moi sur LinkedIn" link="https://www.linkedin.com/in/khaliev/"/>
       </div>
       <div
         class="relative justify-end hidden w-full mt-10 md:flex md:pl-10 md:w-1/2 md:mt-0 md:translate-y-4 xl:translate-y-0"
