--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,7 +19,7 @@ import Logo from "../components/logo.astro";
     >
 
       <a
-        href="https://instagram.com/ccbikai"
+        href="https://www.instagram.com/dev_adlan/"
         target="_blank"
         class="text-neutral-500 dark:text-neutral-400 hover:text-neutral-900 dark:hover:text-white"
       >
@@ -37,7 +37,7 @@ import Logo from "../components/logo.astro";
       </a>
 
       <a
-        href="https://twitter.com/ccbikai"
+        href="https://twitter.com/dev_adlan"
         target="_blank"
         class="text-neutral-500 dark:text-neutral-400 hover:text-neutral-900 dark:hover:text-white"
       >
