--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,4 @@
----
+s---
 import Button from "../components/button.astro";
 import Projects from "../components/home/projects.astro";
 import Separator from "../components/home/separator.astro";
@@ -15,24 +15,24 @@ import Layout from "../layouts/main.astro";
         <h1
           class="mb-5 text-4xl font-bold leading-tight md:text-4xl lg:text-6xl dark:text-white"
         >
-          Bonjour, c'est Adlan.
+          Bonjour, je suis Adlan.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
           Je suis un développeur web fullstack de Reims. <br
             class="hidden lg:block"
-          /> Vous pouvez me confier la création des applications web de toutes sortes.<br class="hidden lg:block" />
+          /> Je suis un développeur web et web mobile.<br class="hidden lg:block" />
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
-          J'utilise les technologies suivantes:
+          J'utilise les technologies suivantes pour réaliser mes créations :
         </p>
         <ul
           class="py-2 space-y-[3px] text-sm list-disc list-inside text-neutral-500 dark:text-neutral-400"
         >
-          <li>HTML / CSS / React.js / Astro.js < : pour le frontend</li>
+          <li>HTML / CSS / React.js / Astro.js pour le frontend</li>
           <li>Node.js avec Express.js pour le backend</li>
           <li>SQL pour la gestion des données</li>
           <li>Figma pour UX / UI design</li>
-          <li>Et bien plus</li>
+          <li>Je peux également créer des sites avec WordPress</li>
         </ul>
         <Button text="Suivez-moi sur LinkedIn" link="https://www.linkedin.com/in/khaliev/"/>
       </div>
