--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,9 @@ import Layout from "../layouts/main.astro";
           Bonjour, je suis Adlan.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-          Je suis un développeur web fullstack de Reims. <br
+          Je suis un développeur web et web mobile de Reims. <br
             class="hidden lg:block"
-          /> Je suis un développeur web et web mobile.<br class="hidden lg:block" />
+//           /> Je suis un développeur web et web mobile.<br class="hidden lg:block" />
         </p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           J'utilise les technologies suivantes pour réaliser mes créations :
