astro index fixed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,7 @@ import Layout from "../layouts/main.astro";
           Bonjour, je suis Adlan.
         </h1>
         <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-          Je suis un développeur web et web mobile de Reims. <br
-            class="hidden lg:block"
-
-        </p>
+          Je suis un développeur web et web mobile de Reims.</p>
         <p class="mb-2 font-semibold text-neutral-800 dark:text-neutral-200">
           J'utilise les technologies suivantes pour réaliser mes créations :
         </p>
