--- a/src/components/home/projects.astro
+++ b/src/components/home/projects.astro
@@ -11,7 +11,7 @@ import Project from "../project.astro";
     Mes projets
   </h2>
   <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-    Voici quelques-uns de mes projets récents. Je travaille toujours sur quelque chose de nouveau, alors, n'hésitez pas à revenir souvent !
+    Voici certains de mes projets récents. Je travaille toujours sur quelque chose de nouveau, alors, n'hésitez pas à revenir souvent !
   </p>
   <div
     class="grid items-stretch w-full sm:grid-cols-2 md:grid-cols-3 gap-7 mt-7"
