--- a/src/components/home/writings.astro
+++ b/src/components/home/writings.astro
@@ -53,7 +53,7 @@ En plus de coder, je travaille sur un blog personnel (écrit en anglais) portant
             </h2>
           </div>
           <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
-            Lisez les mises à jour de mon blog via <a
+            Consultez les mises à jour de mon blog via <a
               class="font-bold"
               href={`https://feedly.com/i/subscription/feed%2F${encodeURIComponent(feed)}`}
               >Feedly</a
