--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/main.astro";
     <p
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
-      Développeur Web fullstack 🧑🏻‍💻, photographe amateur 📸.
+      Développeur Web fullstack 🧑🏻‍💻, photographe amateur 📸, libre penseur 🧐.
     </p>
 
     <h2
@@ -62,13 +62,13 @@ import Layout from "../layouts/main.astro";
     <p
       class="text-sm leading-6 text-gray-600 dark:text-neutral-400 sm:leading-7 lg:leading-8 sm:text-base lg:text-lg"
     >
-      Si vous voulez voir mes mises à jour <a
+      Si vous souhaitez consulter mes mises à jour <a
         href="https://www.linkedin.com/in/khaliev/"
         target="_blank"
         class="text-indigo-600 underline">Suivez-moi sur LinkedIn</a
       >, ou vous pouvez m'écrire un <a href="mailto:dev.adlan@icloud.com" class="text-indigo-600 underline"
-        >mail</a>
-      > et je vous répondrai très vite.
+        >mail📧</a>
+      > je vous répondrai très vite.
     </p>
   </section>
 </Layout>
