--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Layout from "../layouts/main.astro";
           <li>Node.js avec Express.js pour le backend</li>
           <li>SQL pour la gestion des données</li>
           <li>Figma pour UX / UI design</li>
-          <li>Je peux également créer des sites avec WordPress</li>
+          <li>Je crée des sites avec WordPress également</li>
         </ul>
         <Button text="Suivez-moi sur LinkedIn" link="https://www.linkedin.com/in/khaliev/"/>
       </div>
