--- a/src/pages/photographs.astro
+++ b/src/pages/photographs.astro
@@ -1,7 +1,9 @@
 ---
-import PhotographsLoop from "../components/photographs-loop.astro";
+// import PhotographsLoop from "../components/photographs-loop.astro";
+
 import Layout from "../layouts/main.astro";
----
+import PhotographsLoop from "../components/photographs-loop.astro";
+// ---
 
 <Layout title="Mes photographies">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
