--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -107,8 +107,8 @@ import Logo from "../components/logo.astro";
           >
         </div>
         <span class="hidden sm:inline-block">
-          <span id="dayText" class="ml-2">Mode clair</span>
-          <span id="nightText" class="hidden ml-2">Mode sombre</span>
+          <span id="dayText" class="ml-2">Mode jour</span>
+          <span id="nightText" class="hidden ml-2">Mode nuit</span>
         </span>
       </div>
     </nav>
